# jsf

./: .gitignore  CHANGELOG-ZH.md  CHANGELOG.md  LICENSE  README-ZH.md  README.ZH.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/abandoft/jsf_example/: MainActivity.kt
example/assets/: test.js
example/integration_test/: js_runtime_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/ohos/: build-profile.json5  oh-package.json5
example/ohos/AppScope/: app.json5
example/ohos/AppScope/resources/base/element/: string.json
example/ohos/entry/src/main/resources/base/element/: string.json
example/ohos/entry/src/main/resources/zh_CN/element/: string.json
example/ohos/entry/src/ohosTest/: module.json5
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: jsf.podspec
ios/Classes/: jsf.c
ios/Classes/quickjs/: quickjs.c
ios/jsf/: Package.swift
ios/jsf/Sources/jsf/: jsf.c  libunicode.c
ios/jsf/Sources/jsf/include/jsf/: dtoa.h  jsf.h  libregexp-opcode.h  libregexp.h  libunicode-table.h  libunicode.h
lib/: jsf.dart  jsf_bindings_generated.dart  jsf_web.dart
lib/src/: conversion.dart  exception.dart  jsf_bindings.dart  native_bindings.dart  runtime.dart  runtime_ffi.dart  runtime_options.dart  runtime_web.dart  utils.dart  value.dart  value_web.dart
linux/: CMakeLists.txt
macos/: jsf.podspec
macos/Classes/quickjs/: cutils.c  dtoa.c  libregexp.c  libunicode.c
macos/jsf/: Package.swift
macos/jsf/Sources/jsf/: cutils.c  dtoa.c  libregexp.c  quickjs.c
macos/jsf/Sources/jsf/include/jsf/: cutils.h  list.h  quickjs-atom.h  quickjs-opcode.h  quickjs.h
ohos/: oh-package.json5
ohos/src/main/: module.json5
src/: CMakeLists.txt  jsf.c  jsf.h  quickjs.c
test/: web_module_test.dart
windows/: CMakeLists.txt
